# todo-cli-rust

./: Cargo.toml  INTERVIEW.md  README.md
src/: parser.rs  query.rs  runner.rs  todo_list.rs
tests/: integration_test.rs
